2000-12-20

	* VERSION 2.15 RELEASED
	
2000-12-19  Kingpin  <mthurn@tasc.com>

	* lib/WWW/Search/Lycos.pm (native_retrieve_some): rewrite using HTML::TreeBuilder, correcting parsing errors

2000-09-20

	* VERSION 2.14 RELEASED
	
2000-09-21  Kingpin  <mthurn@tasc.com>

	* lib/WWW/Search/Lycos.pm (native_retrieve_some): was missing GUI results with no description

2000-09-19

	* VERSION 2.13 RELEASED
	
2000-09-18  Kingpin  <mthurn@tasc.com>

	* lib/WWW/Search/Lycos.pm (native_retrieve_some): BUGFIX for missing page count number

2000-09-15

	* VERSION 2.12 RELEASED
	
2000-09-15  Kingpin  <mthurn@tasc.com>

	* lib/WWW/Search/Lycos.pm (native_retrieve_some): parse new output format

2000-06-15  Kingpin  <mthurn@tasc.com>

	* lib/WWW/Search/Lycos.pm: new method gui_query, and parse new output format

Revision history for Perl extension WWW::Search::Lycos.